--- a/css/practico.css
+++ b/css/practico.css
@@ -27,11 +27,21 @@ body{
 
 .cabeza{
     text-align: center;
+    font-size: 25px;
 }
 
 section{
     padding: 20px;
     list-style: none;
+    display: flex;
+    width: 80%;
+    margin: auto;
+    flex-wrap: wrap;
+}
+
+section > h2,p{
+    width: 100%;
+    padding: 5px;
 }
 
 .parrafos{
