--- a/css/practico.css
+++ b/css/practico.css
@@ -38,3 +38,12 @@ section{
     padding: 20px;
     font-size: 18px;
 }
+
+.pie{
+    background-color: rgb(212, 212, 212);
+    font-size: 15px;
+    padding: 10px;
+    text-align: center;
+    text-transform: capitalize;
+    border-top: 1px solid black;
+}
